manifests/transmission/ingest-pv.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: s3-ingest
  namespace: common
spec:
  serviceName: s3-ingest
  replicas: 1
  selector:
    matchLabels:
      app: s3-ingest
  template:
    metadata:
      labels:
        app: s3-ingest
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: minio-data
                operator: Exists
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      containers:
      # mount minio for complete
      - name: mount-data
        imagePullPolicy: IfNotPresent
        image: rclone/rclone:latest
        securityContext:
          privileged: true
        args:
        - "mount"
        - ":s3:ingest-minio/"
        - "/vol/mnt"
        - "--s3-provider=Minio"
        - "--s3-env-auth=true"
        - "--s3-region="
        - "--s3-endpoint=http://minio.minio.svc:9000"
        - "--allow-other"
        - "--allow-non-empty"
        - "--vfs-cache-mode=minimal"
        - "--no-modtime"
        - "--cache-dir=/vfs"
        volumeMounts:
        - name: vol-data
          mountPath: /vol/mnt
          mountPropagation: Bidirectional
        - name: vfs-data
          mountPath: /vfs
      # mount minio for incomplete
      - name: mount-cache
        imagePullPolicy: IfNotPresent
        image: rclone/rclone:latest
        securityContext:
          privileged: true
        args:
        - "mount"
        - ":s3:ingest-cache/"
        - "/vol/mnt"
        - "--s3-provider=Minio"
        - "--s3-env-auth=true"
        - "--s3-region="
        - "--s3-endpoint=http://minio.minio.svc:9001"
        - "--allow-other"
        - "--allow-non-empty"
        - "--vfs-cache-mode=writes"
        - "--no-modtime"
        - "--cache-dir=/vfs"
        volumeMounts:
        - name: vol-cache
          mountPath: /vol/mnt
          mountPropagation: Bidirectional
        - name: vfs-cache
          mountPath: /vfs
      volumes:
      # shared path for minio mount
      - name: vol-data
        hostPath:
          path: /var/lib/kubelet/hostpath/ingest-data
          type: DirectoryOrCreate
      - name: vfs-data
        hostPath:
          path: "/var/pv/vfs/data"
          type: DirectoryOrCreate
      # local VFS cache
      - name: vol-cache
        hostPath:
          path: /var/lib/kubelet/hostpath/ingest-cache
          type: DirectoryOrCreate
      - name: vfs-cache
        hostPath:
          path: "/var/pv/vfs/cache"
          type: DirectoryOrCreate
