manifests/transmission/transmission.yaml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: s3-ingest
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: s3-ingest
  template:
    metadata:
      labels:
        k8s-app: s3-ingest
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      hostNetwork: true
      containers:
      - name: rclone
        imagePullPolicy: IfNotPresent
        image: randomcoww/rclone:v1.51.0
        securityContext:
          privileged: true
        args:
        - "mount"
        - ":s3:ingest-minio/"
        - "/vol"
        - "--s3-provider=Minio"
        - "--s3-env-auth=true"
        - "--s3-region="
        - "--s3-endpoint=http://minio.default.svc.cluster.local:9000"
        - "--allow-other"
        - "--allow-non-empty"
        - "--vfs-cache-mode=minimal"
        - "--no-modtime"
        volumeMounts:
        - name: s3-ingest-vol
          mountPath: /vol
          mountPropagation: Bidirectional
      # Mount fuse in mnt under base path so that client container
      # can verify that it is mounted before starting
      volumes:
        - name: s3-ingest-vol
          hostPath:
            path: /var/lib/kubelet/hostpath/ingest/mnt

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: transmission
  template:
    metadata:
      labels:
        k8s-app: transmission
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: k8s-app
                operator: In
                values:
                - s3-ingest
            topologyKey: kubernetes.io/hostname
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      containers:
      - name: transmission
        image: randomcoww/transmission:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9091
        volumeMounts:
        - name: transmission-resume
          mountPath: /transmission
        - name: transmission-config
          mountPath: /var/lib/transmission/settings.json
          subPath: settings.json
        - name: torrent-vol
          mountPath: "/vol"
        lifecycle:
          postStart:
            exec:
              # /vol/mnt should be fuse mounted by rclone
              # Kill the container if this is not mounted
              command: ["mountpoint", "-q", "/vol/mnt"]
      volumes:
      - name: transmission-config
        configMap:
          name: transmission-config
      - name: wireguard-config
        secret:
          secretName: wireguard-config
      - name: transmission-resume
        persistentVolumeClaim:
          claimName: transmission-pvc
      - name: torrent-vol
        persistentVolumeClaim:
          claimName: s3-ingest-pvc

---
kind: Service
apiVersion: v1
metadata:
  name: transmission
spec:
  ports:
  - name: webui
    port: 80
    targetPort: 9091
  selector:
    k8s-app: transmission

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: transmission
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: tr.fuzzybunny.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: transmission
          servicePort: webui
  tls:
  - secretName: internal-tls
